
[project]
name = "benchmarl"
version = "1.5.2"
description = "BenchMARL"
requires-python = ">=3.10"
dependencies = [
    "torchrl>=0.10,<0.12",
    "tqdm",
    "hydra-core",
    "torchvision<0.26",
    "av<14",
    "numpy",
    "simplejson<4.0.0",
    "id-marl-eval",
]

[project.optional-dependencies]
vmas = ["vmas>=1.3.4"]
pettingzoo = ["pettingzoo[all]>=1.24.3"]
gnn = ["torch_geometric"]
logging = ["moviepy", "wandb"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
id-marl-eval = { git = "https://github.com/instadeepai/marl-eval" }
